# shredder_challenge

./: README.md  pyproject.toml
data/shred/: EJ3TVioU8AAqEvN_100_1.pkl  EJ3TVioU8AAqEvN_100_2.pkl  EJ3TVioU8AAqEvN_100_4.pkl  EJ3TVioU8AAqEvN_10_1.pkl  EJ3TVioU8AAqEvN_10_2.pkl  EJ3TVioU8AAqEvN_10_4.pkl  EJ3TVioU8AAqEvN_1_10.pkl  EJ3TVioU8AAqEvN_1_100.pkl  EJ3TVioU8AAqEvN_1_3.pkl  EJ3TVioU8AAqEvN_1_30.pkl  EJ3TVioU8AAqEvN_1_5.pkl  EJ3TVioU8AAqEvN_1_50.pkl  EJ3TVioU8AAqEvN_2_10.pkl  EJ3TVioU8AAqEvN_2_100.pkl  EJ3TVioU8AAqEvN_2_3.pkl  EJ3TVioU8AAqEvN_2_30.pkl  EJ3TVioU8AAqEvN_2_5.pkl  EJ3TVioU8AAqEvN_2_50.pkl  EJ3TVioU8AAqEvN_30_1.pkl  EJ3TVioU8AAqEvN_30_2.pkl  EJ3TVioU8AAqEvN_30_4.pkl  EJ3TVioU8AAqEvN_4_10.pkl  EJ3TVioU8AAqEvN_4_100.pkl  EJ3TVioU8AAqEvN_4_3.pkl  EJ3TVioU8AAqEvN_4_30.pkl  EJ3TVioU8AAqEvN_4_5.pkl  EJ3TVioU8AAqEvN_4_50.pkl  EJ3TVioU8AAqEvN_50_1.pkl  EJ3TVioU8AAqEvN_50_2.pkl  EJ3TVioU8AAqEvN_50_4.pkl  EJ3TVioU8AAqEvN_5_1.pkl  EJ3TVioU8AAqEvN_5_2.pkl  EJ3TVioU8AAqEvN_5_4.pkl  chabudai_kaeshi_100_1.pkl  chabudai_kaeshi_100_2.pkl  chabudai_kaeshi_100_4.pkl  chabudai_kaeshi_10_1.pkl  chabudai_kaeshi_10_2.pkl  chabudai_kaeshi_10_4.pkl  chabudai_kaeshi_1_10.pkl  (+59 more)
notebooks/: dwave-hybrid-sa.ipynb  dwave-hybrid.ipynb  dwave.ipynb  mip.ipynb  mip2-gurobi.ipynb  mip2.ipynb  pyqubo-dwave-hybrid-sa.ipynb  pyqubo-dwave-hybrid.ipynb  pyqubo-dwave.ipynb  pyqubo-dwave2.ipynb  pyqubo-sbm.ipynb  pyqubo.ipynb  simlated_annealing.ipynb  simulated_bifurcation_machine.ipynb
scripts/: shred.sh  shredder.py
